--- a/index.html
+++ b/index.html
@@ -21,58 +21,58 @@
                 <div id = "timer"></div>
                 <hr>
                 <div id = "question"></div>
-                <!--form action = "quiz" method = "get" onsubmit = "return" id = "question">
+                <form action = "quiz" method = "get" onsubmit = "return" id = "question">
                   <p>1. What is the longest river in Africa?</p>
-                  <input type = "radio" name = "a1" value = "nile" id = "correctA1">Nile</input><br>
-                  <input type = "radio" name = "a1" value = "niger" id = "incorrectA1">Niger</input><br>
-                  <input type = "radio" name = "a1" value = "congo" id = "incorrectA1">Congo</input><br>
-                  <input type = "radio" name = "a1" value = "limpopo" id = "incorrectA1">Limpopo</input><br><br>
+                  <input type = "radio" name = "a1" value = "correct" id = "A">Nile</input><br>
+                  <input type = "radio" name = "a1" value = "incorrect" id = "A">Niger</input><br>
+                  <input type = "radio" name = "a1" value = "incorrect" id = "A">Congo</input><br>
+                  <input type = "radio" name = "a1" value = "incorrect" id = "A">Limpopo</input><br><br>
                   <p>2. What is a group of places that share common feature?"</p>
-                  <input type = "radio" name = "a2" value = "climate" id = "incorrectA2">Climate</input><br>
-                  <input type = "radio" name = "a2" value = "location" id = "incorrectA2">Location</input><br>
-                  <input type = "radio" name = "a2" value = "region" id = "correctA2">Region</input><br>
-                  <input type = "radio" name = "a2" value = "atmosphere" id = "incorrectA1">Atmosphere</input><br><br>
+                  <input type = "radio" name = "a2" value = "incorrect" id = "A">Climate</input><br>
+                  <input type = "radio" name = "a2" value = "incorrect" id = "A">Location</input><br>
+                  <input type = "radio" name = "a2" value = "correct" id = "A">Region</input><br>
+                  <input type = "radio" name = "a2" value = "incorrect" id = "A">Atmosphere</input><br><br>
                   <p>3. Which of the following is not one of the themes of geography:</p>
-                  <input type = "radio" name = "a3" value = "human" id = "incorrectA3">Human Environment Interaction</input><br>
-                  <input type = "radio" name = "a3" value = "climate" id = "incorrectA3">Climate</input><br>
-                  <input type = "radio" name = "a3" value = "location" id = "incorrectA3">Location</input><br>
-                  <input type = "radio" name = "a3" value = "movement" id = "correctA3">Movement</input><br><br>
+                  <input type = "radio" name = "a3" value = "incorrect" id = "A">Human Environment Interaction</input><br>
+                  <input type = "radio" name = "a3" value = "incorrect" id = "A">Climate</input><br>
+                  <input type = "radio" name = "a3" value = "incorrect" id = "A">Location</input><br>
+                  <input type = "radio" name = "a3" value = "correct" id = "A">Movement</input><br><br>
                   <p>4. Which river border Ohio and West Virginia?</p>
-                  <input type = "radio" name = "a4" value = "ohio" id = "correctA4">Ohio River</input><br>
-                  <input type = "radio" name = "a4" value = "scioto" id = "incorrectA4">Scioto River</input><br>
-                  <input type = "radio" name = "a4" value = "sandusky" id = "incorrectA4">Sandusky River</input><br>
-                  <input type = "radio" name = "a4" value = "miami" id = "correctA4">Miami River</input><br><br>
+                  <input type = "radio" name = "a4" value = "correct" id = "A">Ohio River</input><br>
+                  <input type = "radio" name = "a4" value = "incorrect" id = "A">Scioto River</input><br>
+                  <input type = "radio" name = "a4" value = "incorrect" id = "A">Sandusky River</input><br>
+                  <input type = "radio" name = "a4" value = "incorrect" id = "A">Miami River</input><br><br>
                   <p>5. The United States of America is located in which hemisphere?</p>
-                  <input type = "radio" name = "a5" value = "south" id = "incorrectA5">Southern hemisphere</input><br>
-                  <input type = "radio" name = "a5" value = "east" id = "incorrectA5">Eastern hemisphere</input><br>
-                  <input type = "radio" name = "a5" value = "north" id = "correctA5">Northern hemisphere</input><br>
-                  <input type = "radio" name = "a5" value = "west" id = "incorrectA5">Western hemisphere</input><br><br>
+                  <input type = "radio" name = "a5" value = "incorrect" id = "A">Southern hemisphere</input><br>
+                  <input type = "radio" name = "a5" value = "incorrect" id = "A">Eastern hemisphere</input><br>
+                  <input type = "radio" name = "a5" value = "correct" id = "A">Northern hemisphere</input><br>
+                  <input type = "radio" name = "a5" value = "incorrect" id = "A">Western hemisphere</input><br><br>
                   <p>6. What is the imaginary line between the Northern and Southern hemisphere called?</p>
-                  <input type = "radio" name = "a6" value = "equator" id = "correctA6">Equator</input><br>
-                  <input type = "radio" name = "a6" value = "prime" id = "incorrectA6">Prime Meridian</input><br>
-                  <input type = "radio" name = "a6" value = "boundary" id = "incorrectA6">Boundary</input><br>
-                  <input type = "radio" name = "a6" value = "relative" id = "incorrectA6">Relative Location</input><br><br>
+                  <input type = "radio" name = "a6" value = "correct" id = "A">Equator</input><br>
+                  <input type = "radio" name = "a6" value = "incorrect" id = "A">Prime Meridian</input><br>
+                  <input type = "radio" name = "a6" value = "incorrect" id = "A">Boundary</input><br>
+                  <input type = "radio" name = "a6" value = "incorrect" id = "A">Relative Location</input><br><br>
                   <p>7. What are the seven major land masses on earth called?</p>
-                  <input type = "radio" name = "a7" value = "condiment" id = "incorrectA7">Condiments</input><br>
-                  <input type = "radio" name = "a7" value = "continent" id = "correctA7">Continents</input><br>
-                  <input type = "radio" name = "a7" value = "camaro" id = "incorrectA7">Camaro</input><br>
-                  <input type = "radio" name = "a7" value = "country" id = "incorrectA7">Countries</input><br><br>
+                  <input type = "radio" name = "a7" value = "incorrect" id = "A">Condiments</input><br>
+                  <input type = "radio" name = "a7" value = "correct" id = "A">Continents</input><br>
+                  <input type = "radio" name = "a7" value = "incorrect" id = "A">Camaro</input><br>
+                  <input type = "radio" name = "a7" value = "incorrect" id = "A">Countries</input><br><br>
                   <p>8. What is the biggest ocean in the world?</p>
-                  <input type = "radio" name = "a8" value = "atlantic" id = "incorrectA8">Atlantic</input><br>
-                  <input type = "radio" name = "a8" value = "indian" id = "incorrectA8">Indian</input><br>
-                  <input type = "radio" name = "a8" value = "pacific" id = "correctA8">Pacific</input><br>
-                  <input type = "radio" name = "a8" value = "arctic" id = "incorrectA8">Arctic</input><br><br>
+                  <input type = "radio" name = "a8" value = "incorrect" id = "A">Atlantic</input><br>
+                  <input type = "radio" name = "a8" value = "incorrect" id = "A">Indian</input><br>
+                  <input type = "radio" name = "a8" value = "correct" id = "A">Pacific</input><br>
+                  <input type = "radio" name = "a8" value = "incorrect" id = "A">Arctic</input><br><br>
                   <p>9. Which state is east of Ohio?</p>
-                  <input type = "radio" name = "a9" value = "kentucky" id = "incorrectA9">Kentucky</input><br>
-                  <input type = "radio" name = "a9" value = "Jersey" id = "incorrectA9">New Jersey</input><br>
-                  <input type = "radio" name = "a9" value = "indiana" id = "incorrectA9">Indiana</input><br>
-                  <input type = "radio" name = "a9" value = "penn" id = "correctA9">Pennsylvania</input><br><br>
+                  <input type = "radio" name = "a9" value = "incorrect" id = "A">Kentucky</input><br>
+                  <input type = "radio" name = "a9" value = "incorrect" id = "A">New Jersey</input><br>
+                  <input type = "radio" name = "a9" value = "incorrect" id = "A">Indiana</input><br>
+                  <input type = "radio" name = "a9" value = "correct" id = "A">Pennsylvania</input><br><br>
                   <p>10. What is a body of land surrounded by three sides of water called?</p>
-                  <input type = "radio" name = "a10" value = "pencil" id = "incorrectA10">Pencil</input><br>
-                  <input type = "radio" name = "a10" value = "dolphin" id = "incorrectA10">Dolphin</input><br>
-                  <input type = "radio" name = "a10" value = "peninsula" id = "correctA10">Peninsula</input><br>
-                  <input type = "radio" name = "a10" value = "island" id = "incorrectA10">Island</input>
-                </form-->
+                  <input type = "radio" name = "a10" value = "incorrect" id = "A">Pencil</input><br>
+                  <input type = "radio" name = "a10" value = "incorrect" id = "A">Dolphin</input><br>
+                  <input type = "radio" name = "a10" value = "correct" id = "A">Peninsula</input><br>
+                  <input type = "radio" name = "a10" value = "incorrect" id = "A">Island</input>
+                </form>
                 <button  id = "submit" btn "btn-lg">Submit</button>
             </div>
             <div id = "modal-window" class = "modal1">
@@ -81,10 +81,10 @@
                 <button onclick ="replay()">Replay</button>
             </div>
         </div>
-        <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
+        <script src = "assets/javascript/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script src = "assets/javascript/app.js"></script>
+
     </body>
 </html>
